@@ -23,7 +23,7 @@ repos:
     hooks:
       - id: reorder-python-imports
   - repo: https://github.com/psf/black.git
-    rev: 23.1.0
+    rev: 23.3.0
     hooks:
       - id: black
         language_version: python3
