@@ -24,6 +24,7 @@ Author:
 """
 import logging
 from abc import ABC
+from multiprocessing import Pool
 from typing import Any
 from typing import cast
 from typing import Dict
@@ -34,6 +35,7 @@ from typing import Optional
 from typing import Union
 
 import pystac
+from tqdm import tqdm
 
 from ..exception import CrawlerError
 from ..extractor import PDSCatalogsDescription
@@ -166,9 +168,6 @@ class StacRecordsTransformer(StacTransformer):
                         List[PdsRecordModel], pds_records_model_pbar
                     ):
                         if self.database.stac_storage.item_exists(record):
-                            logger.warning(
-                                f"this {record} exists in STAC directory, skip it"
-                            )
                             continue
                         try:
                             yield record.to_stac_item(pds_collection)
@@ -196,6 +195,81 @@ class StacRecordsTransformer(StacTransformer):
             bool: True when the catalog or the collection exists otherwise False
         """
         return catlog_or_collection is not None
+
+    def _pds_collection_to_stac(
+        self,
+        pds_collection: List[PdsRegistryModel],
+        items_stac: pystac.ItemCollection,
+    ):
+        """Creates the PDS collection to STAC
+
+        Args:
+            pds_collection (List[PdsRegistryModel]): PDS collection
+            items_stac (pystac.ItemCollection): items
+        """
+        catalogs_ids = [
+            pds_collection.get_body_id(),
+            pds_collection.get_mission_id(),
+            pds_collection.get_plateform_id(),
+            pds_collection.get_instrument_id(),
+            pds_collection.get_collection_id(),
+        ]
+
+        new_catalog: Optional[Union[pystac.Catalog, pystac.Collection]] = None
+
+        for catalog_id in catalogs_ids:
+            stac_catalog = cast(
+                pystac.Catalog,
+                self.catalog.get_child(catalog_id, recursive=True),
+            )
+            if not self._is_exist(stac_catalog):
+                if catalog_id == pds_collection.get_body_id():
+                    stac_catalog = pds_collection.create_stac_body_catalog()
+                    self.catalog.add_child(stac_catalog)
+                elif catalog_id == pds_collection.get_mission_id():
+                    stac_catalog = pds_collection.create_stac_mission_catalog()
+                    self.catalog.get_child(
+                        pds_collection.get_body_id(), recursive=True
+                    ).add_child(stac_catalog)
+                elif catalog_id == pds_collection.get_plateform_id():
+                    stac_catalog = (
+                        pds_collection.create_stac_platform_catalog()
+                    )
+                    self.catalog.get_child(
+                        pds_collection.get_mission_id(), recursive=True
+                    ).add_child(stac_catalog)
+                elif catalog_id == pds_collection.get_instrument_id():
+                    stac_catalog = pds_collection.create_stac_instru_catalog()
+                    self.catalog.get_child(
+                        pds_collection.get_plateform_id(), recursive=True
+                    ).add_child(stac_catalog)
+                elif catalog_id == pds_collection.get_collection_id():
+                    stac_catalog = pds_collection.create_stac_collection()
+                    self.catalog.get_child(
+                        pds_collection.get_instrument_id(), recursive=True
+                    ).add_child(stac_catalog)
+                else:
+                    raise ValueError(f"Undefined catalog : {catalog_id}")
+                if new_catalog is None:
+                    new_catalog = stac_catalog
+            else:
+                logger.debug(
+                    f"Catalog {stac_catalog.id} already exists, skip it"
+                )
+
+        if new_catalog is not None:
+            self.database.stac_storage.normalize_and_save(new_catalog)
+
+        stac_collection = self.catalog.get_child(
+            pds_collection.get_collection_id(), recursive=True
+        )
+        if stac_collection.get_item_links() != len(items_stac):
+            stac_collection.add_items(items_stac)
+            self.database.stac_storage.normalize_and_save(stac_collection)
+
+        if new_catalog is not None:
+            parent = new_catalog.get_parent()
+            parent.save_object(include_self_link=False)
 
     def to_stac(
         self,
@@ -240,105 +314,8 @@ class StacRecordsTransformer(StacTransformer):
                     progress_logger.write_msg(
                         f"{len(items_stac.items)} items to add"
                     )
-
-                # load STAC collection if it exists
-                stac_collection = cast(
-                    pystac.Collection,
-                    self.catalog.get_child(
-                        pds_collection.get_collection_id(), recursive=True
-                    ),
-                )
-
-                # load STAC instrument if it exists
-                stac_instru = cast(
-                    pystac.Catalog,
-                    self.catalog.get_child(
-                        pds_collection.get_instrument_id(), recursive=True
-                    ),
-                )
-
-                # load STAC plateform if it exists
-                stac_host = cast(
-                    pystac.Catalog,
-                    self.catalog.get_child(
-                        pds_collection.get_plateform_id(), recursive=True
-                    ),
-                )
-
-                # load STAC mission if it exists
-                stac_mission: pystac.Catalog = cast(
-                    pystac.Catalog,
-                    self.catalog.get_child(
-                        pds_collection.get_mission_id(), recursive=True
-                    ),
-                )
-
-                # load STAC body if it exists
-                stac_body: pystac.Catalog = cast(
-                    pystac.Catalog,
-                    self.catalog.get_child(pds_collection.get_body_id()),
-                )
-
-                new_catalog: Optional[
-                    Union[pystac.Catalog, pystac.Collection]
-                ] = None
-
-                # Create the STAC catalog for the body if it doesn't exist
-                if not self._is_exist(stac_body):
-                    stac_body: pystac.Catalog = (
-                        pds_collection.create_stac_body_catalog()
-                    )
-                    if new_catalog is None:
-                        new_catalog = stac_body
-                    self.catalog.add_child(stac_body)
-
-                # Create the STAC catalog for the mission if it doesn't exist
-                if not self._is_exist(stac_mission):
-                    stac_mission: pystac.Catalog = (
-                        pds_collection.create_stac_mission_catalog()
-                    )
-                    if new_catalog is None:
-                        new_catalog = stac_mission
-                    stac_body.add_child(stac_mission)
-
-                if not self._is_exist(stac_host):
-                    stac_host: pystac.Catalog = (
-                        pds_collection.create_stac_platform_catalog()
-                    )
-                    if new_catalog is None:
-                        new_catalog = stac_host
-                    stac_mission.add_child(stac_host)
-
-                if not self._is_exist(stac_instru):
-                    stac_instru: pystac.Catalog = (
-                        pds_collection.create_stac_instru_catalog()
-                    )
-                    if new_catalog is None:
-                        new_catalog = stac_instru
-                    stac_host.add_child(stac_instru)
-
-                if not self._is_exist(stac_collection):
-                    stac_collection: pystac.Catalog = (
-                        pds_collection.create_stac_collection()
-                    )
-                    if new_catalog is None:
-                        new_catalog = stac_collection
-                    stac_instru.add_child(stac_collection)
-
-                stac_collection.add_items(items_stac)
-
-                if new_catalog is None:
-                    self.database.stac_storage.normalize_and_save(
-                        stac_collection
-                    )
-                    parent = cast(
-                        pystac.Collection, stac_collection.get_parent()
-                    )
-                    parent.save_object(include_self_link=False)
-                else:
-                    self.database.stac_storage.normalize_and_save(new_catalog)
-                    parent = cast(pystac.Catalog, new_catalog.get_parent())
-                    parent.save_object(include_self_link=False)
+                self._pds_collection_to_stac(pds_collection, items_stac)
+                del items_stac
 
     def describe(self):
         """Describes the STAC catalog and its children as a tree"""
