@@ -3,7 +3,8 @@ fastnumbers==4.0.1
 hdfdict==0.3.1
 lark==1.1.5
 lark-parser==0.12.0
-pystac==1.6.1
+orjson==3.8.12
+#pystac==1.6.1
 requests==2.28.2
 setuptools-scm
 shapely==2.0.1
